fixed a bug when the columns collapsed to three but had an odd width which was hiding elements

--- a/src/assets/footer.css
+++ b/src/assets/footer.css
@@ -1,7 +1,7 @@
 #footer {
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
     margin-top: 2em; 
     height: 8vh; 
@@ -10,13 +10,15 @@
     color: white;
   }
   
-  .in-touch a:hover, .api a:hover {
+  /* .in-touch a:hover, .api a:hover {
     margin: auto;
     text-decoration: none;
     color: white;
     background-color: black;
     transition: color .15s ease-in-out,background-color .15s ease-in-out;
-  }
+  } */
+
+  .in-touch { padding: 0.25em; }
   
   .socials {
     list-style-type: none;
@@ -29,24 +31,34 @@
     padding: 0em 0.5em ;
   }
 
-  .socials li:hover {
-    background-color: black;
+   .socials li:hover {
+     border-radius: 5px;
+    border: 1px solid white;
   }
   
-  .socials a:hover {
-
-    background-color: black;
-  }
   
   .ri-xl {
     padding: 0.1em;
     line-height: unset;
   }
   
-  .ri-xl:hover{
-    color: black;
+  .in-touch a:hover, .api a:hover, .ri-xl:hover{
+    color: rgb(56, 56, 56);
     background-color: white;
-    border-radius: 50%;
-    transition: color .15s ease-in-out,background-color .15s ease-in-out;
+    border-radius: 0.25em;
+    transition: color .15s ease-in-out, background-color 0.25s ease-in-out;
   }
 
+.api{
+  padding-left: 0.5em;
+}
+
+@media (min-width: 400px) {
+  .socials {
+    padding-right: 1em;
+  }
+
+  .api {
+    padding-left: 1em;
+  }
+}
